fix google fonts import

--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html>
 <head>
   <title>Project Euler</title>
-  <link href="https://fonts.googleapis.com/css?family=Source+Serif+Pro" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro|Source+Sans+Pro|Source+Serif+Pro" rel="stylesheet">
+  <link href="style.css" rel="stylesheet">
 </head>
 <body>
   <h1>Project Euler</h1>
-  <p>Solutions to the problems on <a href="https://projecteuler.net/">projecteuler.net</a> written in <a href="https://wiki.haskell.org/Literate_programming">Literate Haskell</a>. Source can be found <a href="https://github.com/hot-leaf-juice/project-euler/tree/master/src">here</a>. Clone it and feed it to <code>ghci</code>!</p>
+  <div class="intro">
+    <p>Solutions to the problems on <a href="https://projecteuler.net/">projecteuler.net</a> written in <a href="https://wiki.haskell.org/Literate_programming">Literate Haskell</a>. Source can be found <a href="https://github.com/hot-leaf-juice/project-euler/tree/master/src">here</a>. Clone it and feed it to <code>ghci</code>!</p>
+  </div>
   <div class="solution" id="001">
     <div class="solution-title">
       <h2><a href="#001"><span class="hash"># </span>001</a></h2>
