change title and remove body border

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html>
 <head>
-  <title>Project Euler</title>
+  <title>Project Euler – Literate Haskell</title>
   <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro|Source+Sans+Pro|Source+Serif+Pro" rel="stylesheet">
   <link href="style.css" rel="stylesheet">
 </head>
 <body>
-  <h1>Project Euler</h1>
+  <h1>Project Euler – Literate Haskell</h1>
   <div class="intro">
     <p>Solutions to the problems on <a href="https://projecteuler.net/">projecteuler.net</a> written in <a href="https://wiki.haskell.org/Literate_programming">Literate Haskell</a>. Source can be found <a href="https://github.com/hot-leaf-juice/project-euler/tree/master/src">here</a>. Clone it and feed it to <code>ghci</code>!</p>
   </div>
